Fixed text not showing up

--- a/code/client/src/components/Pages/About.css
+++ b/code/client/src/components/Pages/About.css
@@ -84,7 +84,7 @@
     text-align: left;
 }
 
-.sponsor-text {
+.sponsor-text-section {
     width: 70%;
 }
 
